--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   --main-color: #2f3797;
   --gold-color: #de9012;
+  --gold-color2: #de9012;
   --darkblue-color: #161635;
   --shd: 0px 2px 50px 10px rgba(44, 43, 105, 0.59);
 }
