--- a/src/components/Slider/slider.css
+++ b/src/components/Slider/slider.css
@@ -1,6 +1,33 @@
-.image{
+/* .image{
     background-size: cover;
     width: -webkit-fill-available;
     height: 100vh;
     margin:0 0 0 -2rem;
+} */
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.swiper {
+  margin-left: auto;
+  margin-right: auto;
 }
