--- a/src/components/ServicesIncluded/ServicesIncluded.scss
+++ b/src/components/ServicesIncluded/ServicesIncluded.scss
@@ -12,5 +12,21 @@
     font-family: cursive;
     margin-bottom: 2rem;
     margin-top: -1rem;
+    color: var(--gold-color2);
+  }
+}
+
+@media (max-width: 600px) {
+  .ServicesIncluded {
+    .cardService1 {
+      display: flex;
+      flex-direction: column;
+      // justify-content: center;
+      // align-items: center;
+      h2{
+        margin-top: 0.5rem;
+      }
+      // flex-wrap: wrap;
+    }
   }
 }
