--- a/src/layout/Header/header.scss
+++ b/src/layout/Header/header.scss
@@ -1,12 +1,6 @@
-/* .image{
-    background-size: cover;
-    width: -webkit-fill-available;
-    height: 100vh;
-    margin:0 0 0 -2rem;
-} */
 .swiper {
   width: 100%;
-  height: 100%;
+  height: 100vh;
 }
 
 .swiper-slide {
@@ -22,12 +16,13 @@
 
 .swiper-slide img {
   display: block;
-  width: 100%;
-  height: 100%;
+  width: -webkit-fill-available;
+  height:100vh;
   object-fit: cover;
 }
-
-.swiper {
-  margin-left: auto;
-  margin-right: auto;
-}
+ .image{
+    background-size: cover;
+    width: -webkit-fill-available;
+    height: 100vh;
+    margin:0 0 0 -2rem;
+} 
