--- a/src/pages/GoldChart/goldChart.scss
+++ b/src/pages/GoldChart/goldChart.scss
@@ -1,4 +1,9 @@
 .gold-chart {
   background-color: var(--darkblue-color);
   text-align: end !important;
+  .card-body {
+    .coursers-open {
+      overflow: auto;
+    }
+  }
 }
