--- a/src/components/AreaCharts/chart.scss
+++ b/src/components/AreaCharts/chart.scss
@@ -8,7 +8,7 @@
 @media (max-width: 786px) {
   .recharts-wrapper {
     width: 600px !important;
-    overflow: scroll;
+    // overflow: scroll;
     .svg.recharts-surface {
       width: 100% !important;
       height: 107% !important;
