--- a/src/layout/Header/header.scss
+++ b/src/layout/Header/header.scss
@@ -1,28 +1,29 @@
-.swiper {
-  width: 100%;
-  height: 100vh;
-}
+.header {
+  .swiper {
+    width: 100%;
+    height: 100vh;
+  }
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
 
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
+    /* Center slide text vertically */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
-  /* Center slide text vertically */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.swiper-slide img {
-  display: block;
-  width: -webkit-fill-available;
-  height:100vh;
-  object-fit: cover;
-}
- .image{
+  .swiper-slide img {
+    display: block;
+    width: -webkit-fill-available;
+    height: 100vh;
+    object-fit: cover;
+  }
+  .image {
     background-size: cover;
     width: -webkit-fill-available;
     height: 100vh;
-    margin:0 0 0 -2rem;
-} 
+    margin: 0 0 0 -2rem;
+  }
+}
