--- a/src/components/GoldNews/GoldNews.scss
+++ b/src/components/GoldNews/GoldNews.scss
@@ -29,7 +29,7 @@
         font-size: 1.1rem;
         font-weight: bold;
         color: var(--main-color);
-        text-align: end;
+        text-align: start;
       }
     }
   }
