--- a/src/pages/Book/book.scss
+++ b/src/pages/Book/book.scss
@@ -8,7 +8,7 @@
       text-align: center;
       font-size: 18px;
       background: #fff;
-
+      border-radius: 1.5rem;
       /* Center slide text vertically */
       display: flex;
       justify-content: center;
