--- a/src/index.css
+++ b/src/index.css
@@ -119,6 +119,7 @@ button {
   width: 60px;
   height: 60px;
   display: flex;
+  font-size: 50px;
   justify-content: center;
   position: fixed;
   bottom: 40px;
