--- a/src/layout/Navbar/navbar.module.scss
+++ b/src/layout/Navbar/navbar.module.scss
@@ -7,7 +7,7 @@ ul{
     margin-right: 3px;
     a{
       color: white !important;
-      font-size: 20px !important;
+      font-size: clamp(1rem, 20vw, 1.1rem) !important;
     }
   }
 }
