--- a/src/pages/GoldChart/goldChart.scss
+++ b/src/pages/GoldChart/goldChart.scss
@@ -6,4 +6,10 @@
       overflow: auto;
     }
   }
+  hr{
+    width: -webkit-fill-available;
+    background-color: #fff;
+    height: 2px;
+    margin: 3px;
+  }
 }
