--- a/src/components/GoldCard/GoldCard.module.scss
+++ b/src/components/GoldCard/GoldCard.module.scss
@@ -83,9 +83,7 @@ button {
 //
 TabList {
   justify-content: center !important;
-  .teb{
-    
-  }
+
 }
 
 .react-tabs__tab--selected,
@@ -94,4 +92,7 @@ TabList {
   border-color: #0a58ca !important;
   color: #de9012 !important;
   border-radius: 5px 5px 0 0 !important;
+}
+.shopping-btn{
+  background-color: #2f3797 !important;
 }
