--- a/src/pages/Book/book.scss
+++ b/src/pages/Book/book.scss
@@ -1,5 +1,21 @@
 .book-landing {
   background-color: var(--darkblue-color);
+  // .home-grid{
+  //   .gold-div{
+  //     .news-date{
+  //       position: absolute;
+  //       bottom: 8px;
+  //       width: 83%;
+  //       margin-left: 2%;
+  //       margin-right: 2%;
+  //       background: #151514 0% 0% no-repeat padding-box;
+  //       border-radius: 4px;
+  //       opacity: 0.66;
+  //       color: var(--gold-color2);
+  //       text-align: center;
+  //     }
+  //   }
+  // }
   .swiper {
     width: 100%;
     height: 100%;
@@ -24,24 +40,4 @@
     object-fit: cover;
   }
 
-  // .swiper {
-  //   width: 100%;
-  //   height: 100%;
-  //   .swiper-slide {
-  //     text-align: center;
-  //     font-size: 18px;
-  //     background: #fff;
-  //     border-radius: 1.5rem;
-  //     display: flex;
-  //     justify-content: center;
-  //     align-items: center;
-
-  //     .swiper-slide img {
-  //       display: block;
-  //       width: 100%;
-  //       height: 19vh !important;
-  //       object-fit: cover;
-  //     }
-  //   }
-  // }
 }
