--- a/src/layout/Header/header.scss
+++ b/src/layout/Header/header.scss
@@ -3,6 +3,7 @@
     width: 100%;
     height: 100vh;
   }
+
   .swiper-slide {
     text-align: center;
     font-size: 18px;
@@ -18,12 +19,21 @@
     display: block;
     width: -webkit-fill-available;
     height: 100vh;
-    object-fit: cover;
+    // object-fit: cover;
   }
+  
   .image {
     background-size: cover;
     width: -webkit-fill-available;
     height: 100vh;
     margin: 0 0 0 -2rem;
+  }
+}
+
+@media (max-width: 320px) {
+  .swiper-slide img {
+    width: 20rem !important;
+    height: 80vh !important;
+
   }
 }
