--- a/src/pages/ProjectIdea/projectIdea.scss
+++ b/src/pages/ProjectIdea/projectIdea.scss
@@ -1,5 +1,6 @@
 @media only screen and (max-width: 600px) {
     .imgbb-consulation {
-        width: 300px
+        width: 300px;
+        height: 300px;
     }
 }
