--- a/src/pages/ProjectIdea/projectIdea.scss
+++ b/src/pages/ProjectIdea/projectIdea.scss
@@ -1,6 +1,14 @@
 @media only screen and (max-width: 600px) {
     .imgbb-consulation {
         width: 300px;
-        height: 300px;
+        height: 300px !important;
+    }
+}
+
+@media (max-width: 600px) {
+    .imgbb-consulationb {
+        width: 300px !important;
+        height: 50vh !important;
+        margin-bottom: 1rem;
     }
 }
