--- a/src/layout/Header/header.scss
+++ b/src/layout/Header/header.scss
@@ -1,39 +1,49 @@
+// .header {
+
+//   //   .swiper {
+//   //     width: 100%;
+//   //     height: 100vh;
+//   //   }
+
+//   //   .swiper-slide {
+//   //     text-align: center;
+//   //     font-size: 18px;
+//   //     background: #fff;
+
+//   //     /* Center slide text vertically */
+//   //     display: flex;
+//   //     justify-content: center;
+//   //     align-items: center;
+//   //   }
+
+//   //   .swiper-slide img {
+//   //     display: block;
+//   //     width: -webkit-fill-available;
+//   //     height: 100vh;
+//   //     // object-fit: cover;
+//   //   }
+
+//   //   .image {
+//   //     background-size: cover;
+//   //     width: -webkit-fill-available;
+//   //     height: 100vh;
+//   //     margin: 0 0 0 -2rem;
+//   //   }
+//   // }
+
+//   // @media (max-width: 320px) {
+//   //   .swiper-slide img {
+//   //     width: 20rem !important;
+//   //     height: 100vh !important;
+
+//   //   }
+// }
 .header {
-  .swiper {
+  .home-image {
     width: 100%;
-    height: 100vh;
-  }
-
-  .swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
-
-    /* Center slide text vertically */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .swiper-slide img {
+    height: auto;
+    // position: center;
+    object-fit: cover;
     display: block;
-    width: -webkit-fill-available;
-    height: 100vh;
-    // object-fit: cover;
-  }
-  
-  .image {
-    background-size: cover;
-    width: -webkit-fill-available;
-    height: 100vh;
-    margin: 0 0 0 -2rem;
-  }
-}
-
-@media (max-width: 320px) {
-  .swiper-slide img {
-    width: 20rem !important;
-    height: 100vh !important;
-
   }
 }
