--- a/src/layout/Header/header.scss
+++ b/src/layout/Header/header.scss
@@ -1,49 +1,48 @@
-// .header {
+ .header {
+   .swiper {
+     width: 100%;
+     height: 100vh;
+   }
 
-//   //   .swiper {
-//   //     width: 100%;
-//   //     height: 100vh;
-//   //   }
+   .swiper-slide {
+     text-align: center;
+     font-size: 18px;
+     background: #fff;
+     /* Center slide text vertically */
+     display: flex;
+     justify-content: center;
+     align-items: center;
+   }
 
-//   //   .swiper-slide {
-//   //     text-align: center;
-//   //     font-size: 18px;
-//   //     background: #fff;
+   .swiper-slide img {
+     display: block;
+     width: -webkit-fill-available;
+     height: 100vh;
+     // object-fit: cover;
+   }
 
-//   //     /* Center slide text vertically */
-//   //     display: flex;
-//   //     justify-content: center;
-//   //     align-items: center;
-//   //   }
+   .image {
+     background-size: cover;
+     width: -webkit-fill-available;
+     height: 100vh;
+     margin: 0 0 0 -2rem;
+   }
+ }
 
-//   //   .swiper-slide img {
-//   //     display: block;
-//   //     width: -webkit-fill-available;
-//   //     height: 100vh;
-//   //     // object-fit: cover;
-//   //   }
+ @media (max-width: 320px) {
+   .swiper-slide img {
+     width: 20rem !important;
+     height: 100vh !important;
+   }
+ }
 
-//   //   .image {
-//   //     background-size: cover;
-//   //     width: -webkit-fill-available;
-//   //     height: 100vh;
-//   //     margin: 0 0 0 -2rem;
-//   //   }
-//   // }
 
-//   // @media (max-width: 320px) {
-//   //   .swiper-slide img {
-//   //     width: 20rem !important;
-//   //     height: 100vh !important;
-
-//   //   }
-// }
-.header {
-  .home-image {
-    width: 100%;
-    height: auto;
-    // position: center;
-    object-fit: cover;
-    display: block;
-  }
-}
+ // .header {
+ //   .home-image {
+ //     width: 100%;
+ //     height: auto;
+ //     // position: center;
+ //     object-fit: cover;
+ //     display: block;
+ //   }
+ // }
