--- a/src/layout/Header/header.scss
+++ b/src/layout/Header/header.scss
@@ -46,3 +46,16 @@
  //     display: block;
  //   }
  // }
+ span.carousel-control-next-icon,
+ span.carousel-control-prev-icon {
+   border: 4px solid var(--bs-black);
+   border-radius: 10px;
+   height: 92px;
+ }
+
+
+ span.carousel-control-next-icon:hover,
+ span.carousel-control-prev-icon:hover {
+
+   background-color: #052c65;
+ }
