--- a/src/layout/Header/header.scss
+++ b/src/layout/Header/header.scss
@@ -48,9 +48,9 @@
  // }
  span.carousel-control-next-icon,
  span.carousel-control-prev-icon {
-   border: 4px solid var(--bs-black);
-   border-radius: 10px;
-   height: 92px;
+   border: 2px solid var(--bs-black);
+   border-radius: 50%;
+   height: 41px;
  }
 
 
