--- a/src/layout/Header/header.scss
+++ b/src/layout/Header/header.scss
@@ -46,12 +46,12 @@
  //     display: block;
  //   }
  // }
- span.carousel-control-next-icon,
- span.carousel-control-prev-icon {
-   border: 2px solid var(--bs-black);
-   border-radius: 50%;
-   height: 41px;
- }
+//  span.carousel-control-next-icon,
+//  span.carousel-control-prev-icon {
+//    border: 2px solid var(--bs-black);
+//    border-radius: 50%;
+//    height: 41px;
+//  }
 
 
  span.carousel-control-next-icon:hover,
